gac_sb/objects/Frais_medicaux__c.object
<CustomObject>
    <description>Frais médicaux associés aus dossiers salariés</description>
    <fields>
        <fullName>Coordonnees_Medecin__c</fullName>
        <formula>CASE(TEXT( Medecin__c) ,
&apos;CHABANE&apos;,
&apos;12, rue Saint Léon&apos;&amp; BR()&amp;
&apos;54000 NANCY&apos;&amp; BR()&amp;
&apos;Tel : 03 83 41 66 81&apos;&amp; BR()&amp;
&apos;      09 53 37 32 16&apos;&amp; BR()&amp;
&apos;      06 27 69 79 08&apos;&amp; BR()&amp;
&apos;Fax : 09 58 37 32 16&apos;&amp; BR()&amp;
&apos;Email : dr.chabane@free.fr&apos;,

&apos;LERAT&apos;,
&quot;54 rue de l&apos;Allouée&quot;&amp; BR()&amp;
&apos;44100 NANTES&apos;&amp; BR()&amp;
&apos;Tel : 02 40 16 20 30&apos;&amp; BR()&amp;
&apos;Email : lerat.herve@wanadoo.fr&apos;,

&apos;LEPARC&apos;,
&quot;22 rue Laugier&quot;&amp; BR()&amp;
&apos;75017 PARIS&apos;&amp; BR()&amp;
&apos;Tel : 01 42 88 44 71&apos;&amp; BR()&amp;
&apos;Email : pierre.leparc@yahoo.fr&apos;,

&apos;PARANT-SICET&apos;,
&apos;16 cours Somme&apos;&amp; BR()&amp;
&apos;33800 BORDEAUX&apos;&amp; BR()&amp;
&apos;Tel : 05 56 94 72 32&apos;&amp; BR()&amp;
&apos;Email : docteur.sicet@wanadoo.fr&apos;,

&apos;BOUCLY&apos;,
&apos;2 rue Thionville&apos;&amp; BR()&amp;
&apos;59000 LILLE&apos;&amp; BR()&amp;
&apos;Tel : 03 20 51 08 04&apos;&amp; BR()&amp;
&apos;Email : patrick.boucly@wanadoo.fr&apos;,

&apos;FISCEL&apos;,
&apos;20, rue de la Savonnerie&apos;&amp; BR()&amp;
&apos;76000 ROUEN&apos;&amp; BR()&amp;
&apos;Tel : 02 35 71 27 72&apos;&amp; BR()&amp;
&apos;      09 71 26 34 25&apos;&amp; BR()&amp;
&apos;Fax : 02 35 88 79 01&apos;&amp; BR()&amp;
&apos;Email : bfiscel@live.fr&apos;,

&apos;DROUOT&apos;,
&apos;4 Boulevard Sakakini&apos;&amp; BR()&amp;
&apos;13004 MARSEILLE&apos;&amp; BR()&amp;
&apos;Tel : 04 91 49 17 96&apos;&amp; BR()&amp;
&apos;      06 11 53 57 58&apos;&amp; BR()&amp;
&apos;Fax : 04 91 49 74 79&apos;,

&apos;FAURE&apos;,
&apos;24 rue Blatin&apos;&amp; BR()&amp;
&apos;63000 CLERMONT&apos;&amp; BR()&amp;
&apos;Tel : 04 73 93 28 48&apos;&amp; BR()&amp;
&apos;Fax : 04 73 35 06 39&apos;&amp; BR()&amp;
&apos;Email :faure_andre@bbox.fr&apos;,

&apos;NEDELEC&apos;,
&apos;16 rue du Garet&apos;&amp; BR()&amp;
&apos;69001 LYON&apos;&amp; BR()&amp;
&apos;Tel : 04 72 07 48 58&apos;&amp; BR()&amp;
&apos;Fax : 04 72 07 48 59&apos;&amp; BR()&amp;
&apos;Email :jln@nedelec-medecin.com&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordonnées Médecin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_de_facture__c</fullName>
        <label>Date de facture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frais_de_medecins_HT__c</fullName>
        <label>Frais de médecins HT</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frais_de_medecins_TTC__c</fullName>
        <label>Frais de médecins TTC</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medecin__c</fullName>
        <label>Médecin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BOUCLY</fullName>
                </value>
                <value>
                    <fullName>CHABANE</fullName>
                </value>
                <value>
                    <fullName>DROUOT</fullName>
                </value>
                <value>
                    <fullName>FAURE</fullName>
                </value>
                <value>
                    <fullName>FISCEL</fullName>
                </value>
                <value>
                    <fullName>LEPARC</fullName>
                </value>
                <value>
                    <fullName>LERAT</fullName>
                </value>
                <value>
                    <fullName>NEDELEC</fullName>
                </value>
                <value>
                    <fullName>PARANT-SICET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motif_frais_medicaux__c</fullName>
        <label>Motif frais médicaux</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avis médical</fullName>
                </value>
                <value>
                    <fullName>Rédaction du rapport</fullName>
                </value>
                <value>
                    <fullName>Déplacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_facture__c</fullName>
        <inlineHelpText>Saisir ici le numéro de la facture correspondant aux frais médicaux.</inlineHelpText>
        <label>Numéro de facture</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recours__c</fullName>
        <label>Recours</label>
        <referenceTo>AppATrecours__c</referenceTo>
        <relationshipLabel>Frais médicaux</relationshipLabel>
        <relationshipName>Frais_medicaux</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Frais médicaux</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <displayFormat>FM-{0000}</displayFormat>
        <label>Numéro identifiant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frais médicaux</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>